# WebServer

./: Makefile  README.md  pyproject.toml
src/: main.py
src/config/: logger.py  settings.py
src/views/: contact.html  home.html
